# hyper-tracing-attributes

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  techstack.md  techstack.yml
examples/: client_json_tracing_otel.rs  client_json_tracing_otel1.rs  echo_trace.rs
examples/echo_trace/: Cargo.toml  README.md
examples/echo_trace/src/: main.rs
src/: analyze.rs  codegen.rs  contracts.rs  lib.rs  lower.rs  parse.rs  server_send.rs
src/contracts/: analyze.rs  codegen.rs  lower.rs
src/server_send/: analyze.rs  codegen.rs  lower.rs  parse.rs  parsed.rs
src/utility/: mod.rs
tests/: contracts.rs  precondition.rs  server_send.rs  trace_field.rs  ui.rs
tests/ui/: has-arguments.rs  has-arguments.stderr  has-expr-argument.rs  has-expr-argument.stderr  item-is-not-a-function.rs  item-is-not-a-function.stderr  trace_field-is-not-an-expression.rs  trace_field-is-not-an-expression.stderr  zero-contracts.rs  zero-contracts.stderr
tests/ui/contracts/error/: has-arguments.rs  has-arguments.stderr  has-expr-argument.rs  has-expr-argument.stderr  item-is-not-a-function.rs  item-is-not-a-function.stderr  precondition-is-not-an-expression.rs  precondition-is-not-an-expression.stderr  zero-contracts.rs  zero-contracts.stderr
tests/ui/contracts/ok/: has-precondition.rs
tests/ui/server_send/error/: has-expression-arguments.rs  has-expression-arguments.stderr  has-no-arguments.rs  has-no-arguments.stderr  has-other-arguments.rs  has-other-arguments.stderr  has-too-many-arguments.rs  has-too-many-arguments.stderr  item-is-not-a-function.rs  item-is-not-a-function.stderr  trace_field-is-not-an-assignment-expression.rs  trace_field-is-not-an-assignment-expression.stderr
tests/ui/server_send/ok/: has-cfg-attr.rs  has-level.rs  has-name.rs  has-trace-field.rs
