[package]
edition = "2021"
name = "http-tracing-attributes"
publish = false
version = "0.0.0"
authors = ["Mark Van de Vyver <mark@taqtiqa.com>"]
license = "Apache or MIT"
readme = "README.md"
repository = "https://github.com/taqtiqa-mark/hyper-tracing-attributes"
homepage = "https://github.com/taqtiqa-mark/hyper-tracing-attributes"
description = """
HTTP primitives for application-level tracing.
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["logging", "metrics", "profiling", "tracing"]

[lib]
proc-macro = true

[dependencies]
darling = "0.13"
opentelemetry = { version = "0.17.0", features = ["rt-tokio", "trace"], optional = false }
# opentelemetry-jaeger = { version = "0.16.0", features = ["reqwest_collector_client","rt-tokio"], optional = false }
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits", "full"] }
tracing = { version = "0.1", features = ["std"], optional = false }
tracing-core = { version = "0.1", default-features = false, optional = false }
# tracing-log = { version = "0.1", default-features = false, optional = false }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"], optional = false }
tracing-tree = { version = "0.2", default-features = false, optional = false }


[dev-dependencies]
trybuild = "1"
tokio = { version = "1", features = ["full", "tracing"] }

[features]
# Nothing by default
default = []
# debug = [ "tracing",
#           "tracing-core",
#           "tracing-log",
#           "tracing-subscriber",
#           "tracing-tree"
#         ]

[[test]]
name = "contracts"
path = "tests/contracts.rs"

[[test]]
name = "server_send"
path = "tests/server_send.rs"
