[package]
edition = "2021"
name = "tracing-attributes-http"
version = "0.1.0"
authors = ["Mark Van de Vyver <mark@taqtiqa.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/taqtiqa-mark/hyper-tracing-attributes"
homepage = "https://github.com/taqtiqa-mark/hyper-tracing-attributes"
description = """
HTTP primitives for application-level tracing.
"""
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["logging", "metrics", "profiling", "tracing"]

[lib]
proc-macro = true

[dependencies]
opentelemetry = { version = "0.17.0", features = ["rt-tokio", "trace"], optional = false }
proc-macro-error = "1"
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits", "full"] }
tracing = { version = "0.1", features = ["std"], optional = false }
tracing-core = { version = "0.1", default-features = false, optional = false }
tracing-tree = { version = "0.2", default-features = false, optional = false }


[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
trybuild = "1"
tokio = { version = "1", features = ["full", "tracing"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["reqwest_collector_client","rt-tokio"], optional = false }

[features]
# Nothing by default
default = []

[[test]]
name = "contracts"
path = "tests/contracts.rs"

[[test]]
name = "server_send"
path = "tests/server_send.rs"

[[example]]
name = "client_json_tracing_json"
path = "examples/client_json_tracing_json.rs"
required-features = ["full",
    "tracing/max_level_trace",
    ]

[[example]]
name = "client_json_tracing_off"
path = "examples/client_json_tracing_off.rs"
required-features = ["full",
    "tracing/max_level_off",
    "log/max_level_off",
    ]

[[example]]
name = "client_json_tracing_otel"
path = "examples/client_json_tracing_otel.rs"
required-features = ["full",
    "trace",
    ]
