[package]
name = "echo_trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
hyper = { version = "0.14", features = ["full", "traceable"] }
opentelemetry = { version="0.17", features = ["serialize", "rt-tokio"] }
opentelemetry-jaeger  = { version="0.16", features = ["rt-tokio"] }
tokio = { version = "1", features = [
    "full",
    # "test-util",
] }
tracing = { version = "0.1", features = ["std","attributes"], optional = false }
tracing-attributes-http = { version = "0", features = ["http"] }
tracing-subscriber = "0.3"
tracing-opentelemetry = { version ="0.17.0", optional = true }

[patch.crates-io]
# hyper = { git = 'https://github.com/taqtiqa-mark/hyper', branch = 'issue-2742' }
hyper = { path = "./../../../hyper" }
tracing-attributes-http = { path = '../../' }
